--- a/package.json
+++ b/package.json
@@ -10,6 +10,15 @@
 		"astro": "astro"
 	},
 	"dependencies": {
-		"astro": "^2.0.10"
+		"@astrojs/netlify": "^2.1.2",
+		"@astrojs/preact": "^2.0.2",
+		"@astrojs/tailwind": "^3.0.1",
+		"@tailwindcss/typography": "^0.5.9",
+		"astro": "^2.0.10",
+		"autoprefixer": "^10.0.2",
+		"daisyui": "^2.50.0",
+		"postcss": ">=8.4.21 <9.0.0",
+		"preact": "^10.6.5",
+		"tailwindcss": "^3.0.24"
 	}
 }
